WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/ADR_LINE__c.field-meta.xml
<CustomField>
    <fullName>ADR_LINE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Line</label>
    <length>50</length>
    <type>Text</type>
</CustomField>