WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/AVG_HIGH_CR__c.field-meta.xml
<CustomField>
    <fullName>AVG_HIGH_CR__c</fullName>
    <label>Average High Credit</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>