WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/CEO_NME__c.field-meta.xml
<CustomField>
    <fullName>CEO_NME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chief Executive Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>