WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/CTRY_CD__c.field-meta.xml
<CustomField>
    <fullName>CTRY_CD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>