WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/DELQ_SCR_ENTRSCR_GRPSCR__c.field-meta.xml
<CustomField>
    <fullName>DELQ_SCR_ENTRSCR_GRPSCR__c</fullName>
    <label>Credit (Delinquency) Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>