WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/DNB_RATG__c.field-meta.xml
<CustomField>
    <fullName>DNB_RATG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DnB Rating</label>
    <length>5</length>
    <type>Text</type>
</CustomField>