WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/FAIL_SCR_ENTRSCR_GRPSCR__c.field-meta.xml
<CustomField>
    <fullName>FAIL_SCR_ENTRSCR_GRPSCR__c</fullName>
    <label>Failure Risk Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>