WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/FAIL_SCR_ENTRSCR_GRPSCR_CLAS__c.field-meta.xml
<CustomField>
    <fullName>FAIL_SCR_ENTRSCR_GRPSCR_CLAS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Failure Risk Score Class</label>
    <length>1</length>
    <type>Text</type>
</CustomField>