WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/FAIL_SCR_NATL_PCTG__c.field-meta.xml
<CustomField>
    <fullName>FAIL_SCR_NATL_PCTG__c</fullName>
    <label>Failure Risk Score National Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>