WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/HIGH_CR__c.field-meta.xml
<CustomField>
    <fullName>HIGH_CR__c</fullName>
    <label>High Credit</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>