WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/NET_INCM__c.field-meta.xml
<CustomField>
    <fullName>NET_INCM__c</fullName>
    <label>Net Income</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>