WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/OUT_BUS_IND__c.field-meta.xml
<CustomField>
    <fullName>OUT_BUS_IND__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Out of Business Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>