WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/PAYD_3_MO_AGO__c.field-meta.xml
<CustomField>
    <fullName>PAYD_3_MO_AGO__c</fullName>
    <label>DnB PAYDEX Three Months Prior</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>