WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/PAYD_NORM__c.field-meta.xml
<CustomField>
    <fullName>PAYD_NORM__c</fullName>
    <label>DnB PAYDEX Norm</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>