WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/POST_CODE__c.field-meta.xml
<CustomField>
    <fullName>POST_CODE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Post Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>