WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/POST_TOWN__c.field-meta.xml
<CustomField>
    <fullName>POST_TOWN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Postal Town</label>
    <length>30</length>
    <type>Text</type>
</CustomField>