WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/PRIM_GEO_AREA__c.field-meta.xml
<CustomField>
    <fullName>PRIM_GEO_AREA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Geographic Area</label>
    <length>30</length>
    <type>Text</type>
</CustomField>