WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/PRIM_NME__c.field-meta.xml
<CustomField>
    <fullName>PRIM_NME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>