WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/PRIM_SIC__c.field-meta.xml
<CustomField>
    <fullName>PRIM_SIC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary SIC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>