WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/SLS__c.field-meta.xml
<CustomField>
    <fullName>SLS__c</fullName>
    <label>Sales</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>