WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/SRVRTID__c.field-meta.xml
<CustomField>
    <fullName>SRVRTID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Server Transaction Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>