WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/STRT_YR__c.field-meta.xml
<CustomField>
    <fullName>STRT_YR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Year Started</label>
    <length>4</length>
    <type>Text</type>
</CustomField>