WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/SUIT_JDGT_IND__c.field-meta.xml
<CustomField>
    <fullName>SUIT_JDGT_IND__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suits or Judgments Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>