WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/TLCM_NBR__c.field-meta.xml
<CustomField>
    <fullName>TLCM_NBR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Telephone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>