WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/TOT_CURR_LIAB__c.field-meta.xml
<CustomField>
    <fullName>TOT_CURR_LIAB__c</fullName>
    <label>Total Current Liabilities</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>