WexGit/Wex_DX/force-app/main/default/objects/forseva1__DnBCustomReport__c/fields/TRNUID__c.field-meta.xml
<CustomField>
    <fullName>TRNUID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>